fix widget getting cut off thing and add some bottom padding

--- a/public/cwp-content/cwp-themes/cwp-theme/assets/css/sass/cwp_theme.scss
+++ b/public/cwp-content/cwp-themes/cwp-theme/assets/css/sass/cwp_theme.scss
@@ -179,4 +179,13 @@ $cwp_green: #A3BE5F;
 
 }
 
+.section-inner {
+
+  margin-bottom: 100px;
+}
+
+.widget:last-child {
+  padding-bottom: 0px;
+  border-bottom: 1px solid $cwp_green;
+}
 
